# Huffman_Projeto_

./: .gitignore  README.md  iyru.c  viera.c
Comparação_Plotagem/: data.txt  fila_prio.c  fila_prio.h  main.c  plotagem.py  pq_heap.c  pq_heap.h
Huffman/Arquivos_code/: CMakeLists.txt
Huffman/Arquivos_code/headers/: arvore_huffman.h  comprimir.h  descomprimir.h  func_extras.h  hash.h  heap.h  opcoes.h  typedef.h  typedefs.h
Huffman/Arquivos_code/source/: arvore_huffman.c  comprimir.c  descomprimir.c  func_extras.c  hash.c  heap.c  main.c  mexendo  o_menu.c  opcoes.c
Huffman/Arquivos_teste/: alagoas.png.huff  ele_fez_denovo.mp3.huff  passaro.mp4.huff  video.mp4.huff
Huffman/Teste/: CMakeLists.txt
Huffman/Teste/headers/: comprimir.h  func_extras.h  opcoes.h  typedefs.h
Huffman/Teste/source/: arvore_huffman.c  comprimir.c  func_extras.c  hash.c  heap.c
Huffman/Teste/teste_estruturas/: teste_arvore_huffman.c  teste_hash.c  teste_heap.c
plotagem/: data.txt  fila_prio.c  fila_prio.h  main  main.c  plotagem.py  pq_heap.c  pq_heap.h
Árvore_B/: Func_insercao.c
